--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/webp" href="/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>aadii chavan - Portfolio</title>
+    <title>aadii chavan - Portfolio Website</title>
   </head>
   <body>
     <div id="root"></div>
